# ad-neuro-diagnostics

./: .env.backend.example  .gitignore  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  videos.txt
ad_neuro_diagnostics/: brain.py  cli.py  constants.py  experiments.py  features.py  inference.py  ingest.py  insights.py  manifests.py  reports.py  utils.py  youtube_ingest.py
apps/web/: .env.example  components.json  index.html  package.json  tsconfig.json
apps/web/src/: main.tsx
apps/web/src/api/: client.ts  hooks.ts  mock.ts  types.ts
apps/web/src/app/: providers.tsx  router.tsx
apps/web/src/components/: app-shell.tsx  brain-heatmap.tsx  brand-mark.tsx  dashboard-preview.tsx  job-status-badge.tsx  report-summary-chart.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx
apps/web/src/lib/: auth.tsx  config.ts  utils.ts  video.ts
apps/web/src/pages/: dashboard-page.tsx  job-progress-page.tsx  landing-page.tsx  library-page.tsx  new-analysis-page.tsx  report-page.tsx  sign-in-page.tsx
apps/web/src/styles/: globals.css
backend/: app.py  auth.py  celery_app.py  config.py  db.py  models.py  pipeline.py  report_builder.py  runner_client.py  schemas.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260409_0001_create_analysis_jobs.py
backend/routers/: jobs.py
deploy/caddy/: Caddyfile
deploy/systemd/: adnd-tribe-runner.service
docker/: Dockerfile.backend  backend-entrypoint.sh
docs/: backend-handoff.md  backend-progress.md  backend-runtime.md  brain-region-claim-assessment.md  data-prep.md  domain-setup-todo.md  frontend-backend-handoff.md  frontend-handoff.md  report-v2-roadmap.md  report-v2-todo.md  research-sources.md  system-action-plan.md  tribe-insight-research.md
examples/: ads_template.csv
scripts/: download_youtube_ads.py  smoke_test_backend.py  tribe_runner_service.py
tests/: test_backend_config.py  test_pipeline.py  test_youtube_ingest.py
